--- a/src/app/global.css
+++ b/src/app/global.css
@@ -6,6 +6,10 @@
     .input {
         @apply rounded-full w-full h-10 bg-hover outline-none focus:outline-primary focus:caret-primary;
     }
+
+    .background {
+        @apply relative bg-theme w-[75vw] h-[100vh] text-white after:absolute after:top-0 after:left-0 after:block after:w-full after:h-full after:bg-repeat after:bg-contain after:bg-background-pattern;
+    }
 }
 
 :root {
@@ -17,6 +21,23 @@
     /* Text color */
     --color-text-primary: #8774e1;
     --color-text-secondary: #aaaaaa;
+}
+
+/* Custom scrollbar styles for webkit browsers */
+html *::-webkit-scrollbar {
+    border-radius: 0;
+    width: 4px;
+    height: 4px;
+}
+
+html *::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: #2c2c2c;
+}
+
+html *::-webkit-scrollbar-track {
+    border-radius: 0;
+    background-color: transparent;
 }
 
 @keyframes rotateNega180deg {
@@ -35,4 +56,16 @@
     to {
         transform: rotate(360deg);
     }
+}
+
+.sidebar-chat-item-active {
+    background-color: #8774e1;
+}
+
+.sidebar-chat-item-active:hover {
+    background-color: #8774e1 !important;
+}
+
+.sidebar-chat-item-active-text {
+    color: white;
 }
