--- a/src/app/global.css
+++ b/src/app/global.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -17,6 +19,18 @@
 
     .lg-button {
         @apply w-14 h-14 bg-background text-secondary text-lg rounded-full flex items-center justify-center transition-all hover:bg-primary hover:text-white;
+    }
+
+    .dialog-btn {
+        @apply p-[10px] rounded-xl;
+    }
+
+    .dialog-btn-danger {
+        @apply text-red-600 hover:bg-red-600/5;
+    }
+
+    .dialog-btn-infor {
+        @apply text-primary hover:bg-[#8774e1]/[.05];
     }
 }
 
@@ -38,10 +52,14 @@
 
     /* border color */
     --border-color-default: #434343;
+
+    /* height */
+    --input-height: 84px;
 }
 
 * {
     scroll-behavior: smooth;
+    font-family: 'Roboto', sans-serif;
 }
 
 /* Custom scrollbar styles for webkit browsers */
